[gd_scene load_steps=2 format=3 uid="uid://d1bl13s3yfic0"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_u1dsp"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u1dsp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -370.0
offset_top = -185.0
offset_right = 369.0
offset_bottom = 171.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 50
text = "CyberClimb"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Start"

[node name="OptionButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Option"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
